# image_stuff

./: .gitmodules  CMakeLists.txt  Makefile-mingw  README.md  asdf.cpp  asdf.h  colormap_plotter.ipynb  hot_colormap.h  hsv_colormap.h  main.cpp  pull_gits.sh  tests.sh
cpp/: CMakeLists.txt  Makefile-mingw  default.nix
cpp/src/libs/: HSV.cpp  colormaps.cpp  colormaps.h  expand_pixels.cpp  expand_pixels.h  generators.h  types.cpp
cpp/src/libs/fractal/: fractal_animator.h  fractal_avx.cpp  fractal_avx.h  fractal_common.cpp  fractal_info.h
cpp/src/libs/util/: lodepng.h
cpp/src/libs/voronoi/: voronoi.h
cpp/src/renders/: colormap_demo.cpp  expand_pixels.cpp  fractal_animation.cpp  mandelbrot_tiled.cpp  rose_dist.cpp  voronoi_iterative.cpp
cpp/src/tests/: find_fourier_max.cpp
cpp/src/tests/unit_tests/: all_tests.cpp  test_cubic_interp.h  test_hsv.h
external_libs/: csv.h  gl2ps.c
go/: BBox.go  Octree.go  Sphere.go  Surface.go  Types.go  b_spline.go  generated_vectors.go  iat_fractals.go  image.go  interpolation.go  matrix.go  util.go  vectors.go
go/codegen/: generate_vectors.go
go/dragon_turtle/: dragon_turtle_l_system.go
go/main/: dragon_curve.go  dragon_curve_pixel_turtle.go  dragon_curve_wallpaper.go  golden_dragon.go  main.go  sierpinski.go  sierpinski_arrowhead_curve.go  sierpinski_arrowhead_depth.go  sierpinski_arrowhead_smoothed_range.go  sierpinski_arrowhead_smoothing.go  test_bspline.go
go/test/: non_square_bounds_test.go  parallel_for_test.go
image_stuff_go/: colormap_tmp.go
image_stuff_go/image_stuff/: colormap.go
libs/: image_utils.cpp  image_utils.h  matrix.cpp  matrix.h  types.h  vctr.cpp  vctr.h
old/: image_filler.cpp  image_filler.h  main.cpp  plot.cpp
src/libs/: HSV.h  colormaps.cpp  colormaps.h  curve_dist_filler.cpp  curve_dist_filler.h  filters.cpp  filters.h  fractal.cpp  fractal.h  fractal_animation_zoom.cpp  fractal_animation_zoom.h  fractal_animator.cpp  fractal_animator.h  fractal_common.cpp  fractal_common.h  fractal_multithread.cpp  fractal_multithread.h  fractal_singlethread.cpp  fractal_singlethread.h  fractal_smooth.cpp  fractal_smooth.h  generators.cpp  generators.h  image_difference.cpp  image_difference.h  image_utils.cpp  image_utils.h  io.cpp  io.h  mandelbrot.cpp  mandelbrot.h  types.cpp  types.h  voronoi.cpp  voronoi.h  voronoi_animation.cpp  voronoi_animation.h
src/libs/fractal/: downsampling_fractal_animation.cpp  downsampling_fractal_animation.h  fractal_animation_zoom.cpp  fractal_animation_zoom.h  fractal_animator.cpp  fractal_animator.h  fractal_common.cpp  fractal_common.h  fractal_impl.h  fractal_info.h  fractal_multithread.cpp  fractal_multithread.h  fractal_singlethread.cpp  fractal_singlethread.h
src/libs/util/: arg_parser.cpp  arg_parser.h  cubic_interp.cpp  cubic_interp.h  debug.h  linear_interp.cpp  linear_interp.h  lodepng.cpp  matrix.h  vect.h
src/libs/voronoi/: iterative_filter.cpp  iterative_filter.h  voronoi.cpp  voronoi.h  voronoi_old.cpp  voronoi_old.h
src/renders/: chaos_game.cpp  chaos_game2.cpp  color_cc.cpp  colormap_demo.cpp  expand_pixels.cpp  fft_upscale_image.cpp  fractal_animation.cpp  gaussian_blur.cpp  lissajous_dist.cpp  mandelbrot.cpp  mandelbrot_tiled.cpp  plot_waves.cpp  polar_grid.cpp  render_curve_dist.cpp  rose_dist.cpp  rose_dist_range.cpp  smooth_fractal.cpp  square_to_widescreen.cpp  voronoi.cpp  voronoi_animation.cpp  voronoi_transform.cpp  zoom.cpp
src/tests/: benchmark_types.cpp  benchmark_virtual.cpp  find_fourier_max.cpp  fractal_cell_test.cpp  test_generators.cpp  test_io.cpp
src/tests/unit_tests/: FractalTest.h  VoronoiTest.h  all_tests.cpp  test_cubic_interp.h
src/tmp_tests/: bench_double_v_numeric.cpp  bench_sin_v_lookup_v_polynomial.cpp  fft_pcm.cpp  monotone_cubic_test.cpp  random_notes_pcm.cpp  test_min_val.cpp  test_minimization.cpp
tmp_tests/: bench_double_v_numeric.cpp  bench_sin_v_lookup_v_polynomial.cpp
